# python_progs

./: README.md
data/: nbody_output_case_0.json  nbody_output_case_1.json  nbody_output_case_3.json
nbody_plot/: plot_nbody.py
nbody_plot/data/: nbody_output_case_2.json  nbody_output_case_4.json  nbody_output_case_5.json  nbody_output_case_6.json
python_interfaces/nbody_boost_python/: README_nbody_boost_python.txt  binding.cc  nbody_test.py  rc.sh
python_interfaces/nbody_cython/: README_cython.txt  nbody.pxd  nbody_test.py  setup.py  wrapper.pyx
python_interfaces/nbody_pybind11/: CMakeLists.txt  README_nbody_pybind11.txt  bindings.cc  nbody_test.py
